examples/kurel/frigate/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${app.name}
  namespace: ${app.namespace}
  labels:
    app.kubernetes.io/name: ${app.name}
    app.kubernetes.io/instance: ${app.name}
    app.kubernetes.io/managed-by: kurel
spec:
  type: ${service.type}
  loadBalancerIP: ${service.loadBalancerIP}
  selector:
    app.kubernetes.io/name: ${app.name}
    app.kubernetes.io/instance: ${app.name}
  ports:
    - name: http
      port: ${service.ports.http}
      protocol: TCP
      targetPort: http
    - name: rtmp
      port: ${service.ports.rtmp}
      protocol: TCP
      targetPort: rtmp
    - name: rtsp
      port: ${service.ports.rtsp}
      protocol: TCP
      targetPort: rtsp
    - name: webrtc
      port: ${service.ports.webrtc}
      protocol: TCP
      targetPort: webrtc
